mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 1883
            - containerPort: 8883
          volumeMounts:
            - name: mosquitto-conf
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-certs
              mountPath: /mosquitto/config/certs
      volumes:
        - name: mosquitto-conf
          configMap:
            name: mosquitto-conf
        - name: mosquitto-certs
          configMap:
            name: mosquitto-certs

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
    - name: mqtt-ssl
      protocol: TCP
      port: 8883
      targetPort: 8883

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mosquitto-route
spec:
  host: mqtt.student2307277.rahtiapp.fi
  to:
    kind: Service
    name: mosquitto
  tls:
    termination: passthrough
